Bug 162461 - FILESAVE: Automatic text color lost in DOCX roundtrip of specific document
Summary: FILESAVE: Automatic text color lost in DOCX roundtrip of specific document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.1.2 release
Hardware: All All
: low normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords:
Depends on:
Blocks: Automatic-Color
  Show dependency treegraph
 
Reported: 2024-08-14 04:33 UTC by Urmas
Modified: 2025-10-20 17:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (5.60 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-08-16 16:18 UTC, Urmas
Details
Second sample document (4.98 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-11-15 23:43 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2024-08-14 04:33:19 UTC
Description:
The automatic text color is not saved to a DOCX file. It reverts to black.

Steps to Reproduce:
Open a document, change the text color in the style, save the document.

Actual Results:
Text is black.

Expected Results:
Text is auto.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
-
Comment 1 m_a_riosv 2024-08-14 12:17:04 UTC
No issue with
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Please attach a sample file, reduce the size as much as possible without private information, and paste the information in Menu/Help/About LibreOffice, there is a copy icon.
Comment 2 raal 2024-08-16 14:57:26 UTC
No erpro with Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ccdf1096a6103d2ab8690e8e97dcf3496160ecff
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 Urmas 2024-08-16 16:18:55 UTC
Created attachment 195871 [details]
Sample document

Version: 24.8.1.0.0+ (X86_64) / LibreOffice Community
Build ID: 7b89f819be16fb14aa2e37c60af0b3a21e99c4ca
CPU threads: 2; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Comment 4 m_a_riosv 2024-08-17 00:30:09 UTC
Seems it is the option:
Menu/Tools/LibreOffice/Accessibility - Use automatic font color for screen display

that has a different behavior with
Version: 24.8.1.0.0+ (X86_64) / LibreOffice Community
Build ID: 2bf3cada925ca49e3ac6a249ec6c342954739986
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
and with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: afe19beb79c3f88e42fd4b1d9b87cd324092197f
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Works for me with
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 5 raal 2024-11-15 14:00:38 UTC
(In reply to m_a_riosv from comment #4)
> Seems it is the option:
> Menu/Tools/LibreOffice/Accessibility - Use automatic font color for screen
> display
> 
Please can you test with recent dev version? This option makes no difference for me. My steps
- open test file
- Edit style   Default Paragraph style
- tab Font Effect > Font Color
- change black color to Automatic 
- save, reload
-> Font color in Default paragraph style is black again with the option "Use automatic font color for screen display" on or off.
Comment 6 m_a_riosv 2024-11-15 23:43:15 UTC
Created attachment 197640 [details]
Second sample document

(In reply to raal from comment #5)
> ....
Reproducible with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: deaa5dc2a4d5446cdd120236615608702598e365
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

saving as ODT doesn't happen.

But in Word that option is not part of paragraph style but character format, and setting the 'Automatic' for character in Word is retrieved in Writer with the character format as 'Automatic'

No clear if it is really a bug or an issue of incompatibility for it, or samething in relation with that file

But with a new document created with 24.8.3 and Dev version, seems it works fine, and color or automatic is preserved.
Comment 7 Timur 2025-01-29 09:35:18 UTC
This seems only with this specific document. 
Easier steps are: make ODT from the sample and set Automatic color. Save as DOCX. Open in LO. (no need for MSO).
See modified Default paragraph. It has: style:use-window-font-color="true" but that should be default, and:  fo:background-color="transparent" .
Not clear why this is marked regression.
Comment 8 Justin L 2025-10-16 15:51:36 UTC
Testing with auto.docx from comment 3

Interestingly, although LO 3.3 saves as w:color="auto", it re-imports it as black.
4.4 wrongly initially imported as automatic, but re-imports as black.
5.4 is back to 3.3 behaviour

The round-trip started importing correctly with 6.1
commit fe6da2feb57c3d5e355a36f6b8ac09b48412ff39
Author: Luke Deller on Thu Mar 8 01:11:40 2018 +1100
    tdf#116179 Support reading "auto" colour from docx
    Reviewed-on: https://gerrit.libreoffice.org/50995

The "export auto as black" started in LO 6.4.1 with
commit 9476dfe7d1b86b367966e7dedf67e11936c8d9d7
Author: Serge Krot on Fri Jan 10 14:44:25 2020 +0100
    tdf#129924 docx import: set background color
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86542
Comment 9 Commit Notification 2025-10-17 11:23:38 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/74063178d58d30706c68003ee8ad8e6053f8df50

tdf#162461 Revert "tdf#129924 docx import: set background color"

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-10-20 17:20:37 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/92307cad6a66f4fc891f566b9a40832971b198f4

tdf#162461 Revert "tdf#129924 docx import: set background color"

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.