tdf#162461 Revert "tdf#129924 docx import: set background color"

This reverts 6.4.1 commit 9476dfe7d1b86b367966e7dedf67e11936c8d9d7

Automatic font-color needs to be exported as automatic,
not some hard-coded value based on some background whatever.

There were lots of fixes related to "highlight" verses "shade"
backgrounds in 7.x, so this hackery would be obsolete anyway.

Change-Id: Ic62fe56c74cffd8c8475befe745e9fb1c227ec1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192518
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 74063178d58d30706c68003ee8ad8e6053f8df50)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192695
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>