sw/source/filter/ww8/ww8atr.cxx
@@ -267,22 +267,6 @@ void MSWordExportBase::ExportPoolItemsToCHP( ww8::PoolItems &rItems, sal_uInt16 
 
                 AttrOutput().OutputItem( fontHeight );
              }
-             else if (nWhich == RES_CHRATR_COLOR)
-             {
-                const SvxColorItem& rColor = pItem->StaticWhichCast(RES_CHRATR_COLOR);
-                const SfxPoolItem* pBackgroundItem = SearchPoolItems(rItems, RES_CHRATR_BACKGROUND);
-                if (rColor.GetValue() == COL_AUTO && pBackgroundItem)
-                {
-                    const SvxBrushItem& rBrushBackground = pBackgroundItem->StaticWhichCast(RES_CHRATR_BACKGROUND);
-                    SvxColorItem aForeground(rBrushBackground.GetColor().IsDark() ? COL_WHITE : COL_BLACK, RES_CHRATR_COLOR);
-                    AttrOutput().OutputItem(aForeground);
-                }
-                else
-                {
-                    // default
-                    AttrOutput().OutputItem( *pItem );
-                }
-             }
              else if (nWhich == RES_CHRATR_HIGHLIGHT)
              {
                 const SvxBrushItem& rBrush = pItem->StaticWhichCast(RES_CHRATR_HIGHLIGHT);
